--- a/mon/index.html
+++ b/mon/index.html
@@ -2657,8 +2657,8 @@
                                     <input class="form-control valid" name="email" type="email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Укажите e-mail адрес'" placeholder="Email">
                                 </div>
                             </div>
-                            <div class="col-12 text-center">
-                                <button type="submit" id="exp" class="btn btn-primary">Отправить</button>
+                            <div class="col-12 text-center pb-3">
+                                <button type="submit" id="exp" class="btn btn-primary" >Отправить</button>
                                 <button type="button" id="clear" class="btn btn-secondary">Очистить</button>
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
                             </div>
