--- a/mon/index.html
+++ b/mon/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="zxx" xmlns="http://www.w3.org/1999/html">
-
+<html lang="ru" >
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -87,8 +86,8 @@
         </div>
     </div>
     <!-- header-start -->
-    <section id="header">
-        <header>
+
+        <header id="header">
             <div class="header-area ">
                 <div id="sticky-header" class="main-header-area">
                     <div class="container-fluid p-0">
@@ -97,7 +96,7 @@
                             <div class="col-6 col-md-6 col-xl-2 col-lg-2  col-sm-6">
                                 <div class="logo-img pl-3">
                                     <a href="index.html">
-                                        <img src="images/logo/logo2.png" class="img-fluid">
+                                        <img src="images/logo/logo2.png" class="img-fluid" alt="Логотип">
                                     </a>
                                 </div>
                             </div>
@@ -132,7 +131,7 @@
                                                     <li><a href="#karkas">Каркас кухни</a></li>
                                                     <li><a href="#fasad">Фасады</a></li>
                                                     <li><a href="#stol-kuhni">Столешницы</a></li>
-                                                    <li><a href="#fartuh">Фартух</a></li>
+                                                    <li><a href="#fartuh">Фартук</a></li>
                                                     <li><a href="#furniture">Фурнитура</a></li>
                                                     <li><a href="#complect">Комплектующие</a></li>
                                                     <li><a href="#lumen">Подсветка</a></li>
@@ -1173,7 +1172,7 @@
                 </div>
             </div>
             <div class="col-12 animate-box">
-                <img src="images/iz-sostait-kuhnya_2.png" class="img-fluid">
+                <img src="images/iz-sostait-kuhnya_2.png" class="img-fluid" alt="Элементы кухни и материалы">
             </div>
         </div>
     </div>
@@ -1190,7 +1189,7 @@
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-md-6">
-                            <img src="images/foto-text/karkas.jpg" class="img-fluid ob-fit">
+                            <img src="images/foto-text/karkas.jpg" class="img-fluid ob-fit" alt="Корпус кухни">
                         </div>
                     </div>
                     <div class="row ">
@@ -1287,7 +1286,7 @@
 
                     <div class="row justify-content-center">
                         <div class="col-md-6">
-                            <img src="images/foto-text/fasad.png" class="img-fluid">
+                            <img src="images/foto-text/fasad.png" class="img-fluid" alt="Фасады">
                         </div>
                     </div>
                     <div class="row">
@@ -1403,7 +1402,7 @@
 
                     <div class="row justify-content-center">
                         <div class="col-md-6">
-                            <img src="images/foto-text/stol.jpg" class="img-fluid">
+                            <img src="images/foto-text/stol.jpg" class="img-fluid" alt="Столешницы">
                         </div>
                     </div>
                     <div class="row">
@@ -1512,13 +1511,13 @@
                         <div class="col-12 col-md-12 p-2">
                             <h4>
                                 <span class="lnr lnr-bookmark"></span>
-                                Кухоный фартух
+                                Кухоный фартук
                             </h4>
                         </div>
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-md-6">
-                            <img src="images/foto-text/fartuh.png" class="img-fluid ob-fit">
+                            <img src="images/foto-text/fartuh.png" class="img-fluid ob-fit" alt="фартук">
                         </div>
                     </div>
                     <div class="row ">
@@ -1612,7 +1611,7 @@
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-md-6">
-                            <img src="images/foto-text/furniture.png" class="img-fluid ob-fit">
+                            <img src="images/foto-text/furniture.png" class="img-fluid ob-fit" alt="Фурнитура">
                         </div>
                     </div>
                     <div class="row ">
@@ -1706,7 +1705,7 @@
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-md-6">
-                            <img src="images/foto-text/complect.png" class="img-fluid ob-fit">
+                            <img src="images/foto-text/complect.png" class="img-fluid ob-fit" alt="Комплектующие">
                         </div>
                     </div>
                     <div class="row ">
@@ -1800,7 +1799,7 @@
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-md-6">
-                            <img src="images/foto-text/lumen.png" class="img-fluid ob-fit">
+                            <img src="images/foto-text/lumen.png" class="img-fluid ob-fit" alt="Подсветка">
                         </div>
                     </div>
                     <div class="row ">
@@ -2016,7 +2015,7 @@
                             <div class="col-8">
                                 <div class="price-img" >
                                     <div  class="price-img-style">
-                                        <img src="images/7.jpg" class="img-fluid">
+                                        <img src="images/7.jpg" class="img-fluid" alt="цены на кухни">
                                     </div>
                                 </div>
                             </div>
@@ -2049,7 +2048,7 @@
                             <div class="col-8">
                                 <div class="price-img" >
                                     <div  class="price-img-style">
-                                        <img src="images/9.jpg" class="img-fluid">
+                                        <img src="images/9.jpg" class="img-fluid" alt="цены на кухни">
                                     </div>
                                 </div>
                             </div>
@@ -2084,7 +2083,7 @@
 
                                 <div class="price-img" >
                                     <div  class="price-img-style">
-                                        <img src="images/10.jpg" class="img-fluid">
+                                        <img src="images/10.jpg" class="img-fluid" alt="цены на кухни">
                                     </div>
                                 </div>
                             </div>
@@ -2119,7 +2118,7 @@
                             <div class="col-8">
                                 <div class="price-img" >
                                     <div  class="price-img-style">
-                                        <img src="images/8.jpg" class="img-fluid">
+                                        <img src="images/8.jpg" class="img-fluid" alt="цены на кухни">
                                     </div>
                                 </div>
                             </div>
@@ -2153,7 +2152,7 @@
 
                                 <div class="price-img" >
                                     <div  class="price-img-style">
-                                        <img src="images/6.jpg" class="img-fluid">
+                                        <img src="images/6.jpg" class="img-fluid" alt="цены на кухни">
                                     </div>
                                 </div>
                             </div>
@@ -2188,7 +2187,7 @@
                             <div class="col-8">
                                 <div class="price-img" >
                                     <div  class="price-img-style">
-                                        <img src="images/5.jpg" class="img-fluid">
+                                        <img src="images/5.jpg" class="img-fluid" alt="цены на кухни">
                                     </div>
                                 </div>
                             </div>
@@ -2222,7 +2221,7 @@
 
                                 <div class="price-img" >
                                     <div  class="price-img-style">
-                                        <img src="images/4.jpg" class="img-fluid">
+                                        <img src="images/4.jpg" class="img-fluid" alt="цены на кухни">
                                     </div>
                                 </div>
                             </div>
@@ -2408,7 +2407,7 @@
                     <div class="rewievs-item">
                         <div class="d-flex justify-content-center align-items-center">
                             <div class="img-client ">
-                                <img src="images/ani2.jpg" class="img-fluid">
+                                <img src="images/ani2.jpg" class="img-fluid" alt="Персона">
                             </div>
                         </div>
                         <div class="text-center">
@@ -2431,7 +2430,7 @@
                     <div class="rewievs-item">
                         <div class="d-flex justify-content-center align-items-center">
                             <div class="img-client ">
-                                <img src="images/ani1.jpg" class="img-fluid">
+                                <img src="images/ani1.jpg" class="img-fluid" alt="Персона">
                             </div>
                         </div>
                         <div class="text-center">
@@ -2453,7 +2452,7 @@
                     <div class="rewievs-item">
                         <div class="d-flex justify-content-center align-items-center">
                             <div class="img-client ">
-                                <img src="images/ani3.jpg" class="img-fluid">
+                                <img src="images/ani3.jpg" class="img-fluid" alt="Персона">
                             </div>
                         </div>
                         <div class="text-center">
@@ -2490,22 +2489,22 @@
                 </div>
                 <div class="owl-carousel our_partner animate-box">
                     <div class="p-5">
-                        <img src="images/blum.png">
+                        <img src="images/blum.png" alt="blum">
                     </div>
                     <div class="p-5">
-                        <img src="images/boyard.png">
+                        <img src="images/boyard.png" alt="boyard">
                     </div>
                     <div class="p-5">
-                        <img src="images/egger.png">
+                        <img src="images/egger.png" alt="egger">
                     </div>
                     <div class="p-5">
-                        <img src="images/cleaf.png">
+                        <img src="images/cleaf.png" alt="cleaf">
                     </div>
                     <div class="p-5">
-                        <img src="images/pf.png">
+                        <img src="images/pf.png" alt="pf">
                     </div>
                     <div class="p-5">
-                        <img src="images/agt.png">
+                        <img src="images/agt.png" alt="agt">
                     </div>
                 </div>
             </div>
@@ -2531,7 +2530,7 @@
                     <h2 class="contact-title">Что вы хотите узнать?</h2>
                 </div>
                 <div class="col-lg-8">
-                    <form class="form-contact contact_form" action=""  id="contactForm" novalidate="novalidate">
+                    <form class="form-contact contact_form"   id="contactForm" novalidate="novalidate">
                         <div class="row">
                             <div class="col-12">
                                 <div class="form-group">
@@ -2583,9 +2582,8 @@
             </div>
 
             </div>
-        </div>
         <div>
-             <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A32677ee5658625eeb925d5eb3705b99a4cd305b6dd2110a5b4b854ba25dd0363&amp;width=100%25&amp;height=450&amp;lang=ru_RU&amp;scroll=false"></script>
+             <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A32677ee5658625eeb925d5eb3705b99a4cd305b6dd2110a5b4b854ba25dd0363&amp;width=100%25&amp;height=450&amp;lang=ru_RU&amp;scroll=false"></script>
         </div>
     </section>
 <!-- END Contacts -->
@@ -2650,7 +2648,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form class="form-contact contact_form clear-form" action=""  id="contactFormModal" novalidate="novalidate">
+                    <form class="form-contact contact_form clear-form" id="contactFormModal" novalidate="novalidate">
                         <div class="row">
                             <div class="col-12">
                                 <div class="form-group">
@@ -2694,7 +2692,7 @@
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/gijgo.min.js"></script>
-<script src="lib/noty.js" type="text/javascript"></script>
+    <script src="lib/noty.js" ></script>
 
     <!-- mask phone -->
     <script src="js/jquery.maskedinput.min.js"></script>
@@ -2707,10 +2705,11 @@
     <script src="js/mail-script.js"></script>
 
     <!-- JqueryLightGallery -->
-    <script type="text/javascript" src="js/lightgallery.min.js"></script>
-    <script type="text/javascript" src="js/jquery.mousewheel.min.js"></script>
-    <script type="text/javascript" src="js/lg-fullscreen.min.js"></script>
-    <script type="text/javascript" src="js/lg-thumbnail.min.js"></script>
+    <script src="js/lightgallery.min.js"></script>
+    <script src="js/jquery.mousewheel.min.js"></script>
+    <script src="js/lg-fullscreen.min.js"></script>
+    <script src="js/lg-thumbnail.min.js"></script>
+
     <script src="js/main.js"></script>
     <script src="js/atlas.js"></script>
     <script>
