--- a/mon/index.html
+++ b/mon/index.html
@@ -186,7 +186,6 @@
             </div>
         </header>
         <!-- header-end -->
-    </section>
     <!-- slider_area_start -->
     <div class="slider_area">
         <div class="slider-main">
@@ -1895,7 +1894,7 @@
             </div>
             <div class="col-12 animate-box">
                 <div class="d-flex justify-content-center">
-                    <img src="images/project-kuhni.png" class="img-fluid">
+                    <img src="images/project-kuhni.png" class="img-fluid" alt="Дизайн-проект">
                 </div>
             </div>
             <div class="col-12 pt-5">
@@ -1940,7 +1939,7 @@
                 </div>
                 <div class="col-md-4 d-none d-md-block animate-box" data-animate-effect="jackInTheBox">
                     <div>
-                        <img src="images/10.jpg" class="img-fluid profit-img">
+                        <img src="images/10.jpg" class="img-fluid profit-img" alt="">
                     </div>
                 </div>
                 <div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
